Add OpenAPI support for API imports